recibir parametros en routing

--- a/src/app/components/menu.component/menu.component.html
+++ b/src/app/components/menu.component/menu.component.html
@@ -10,7 +10,13 @@
             <a [routerLink]="['/musica']">Musica</a>
         </li>
         <li>
-            <a [routerLink]="['/numerodoble']">Doble</a>
+            <a [routerLink]="['/doble']">Doble</a>
+        </li>
+        <li>
+            <a [routerLink]="['/doble/5']">Doble de 5</a>
+        </li>
+        <li>
+            <a [routerLink]="['/doble/7']">Doble de 7</a>
         </li>
     </ul>
 </div>
