--- a/src/app/components/numero.doble.component/numero.doble.component.html
+++ b/src/app/components/numero.doble.component/numero.doble.component.html
@@ -1,3 +1,10 @@
 <div>
-    <h1>Numero doble</h1>
+    <h1>Numero doble (X2)</h1>
+    @if(numero) {
+        <h2 style="color: blue;">
+            El doble de {{numero}} es {{doble}}
+        </h2>
+    }@else {
+        <h2 style="color: red;">No hemos recibido parámetro</h2>
+    }
 </div>
