--- a/src/app/components/numero.doble.component/numero.doble.component.html
+++ b/src/app/components/numero.doble.component/numero.doble.component.html
@@ -7,4 +7,6 @@
     }@else {
         <h2 style="color: red;">No hemos recibido parámetro</h2>
     }
+    <button (click)="goToHome()">Volver</button>
+    <button (click)="redirect(22)">Doble de 22</button>
 </div>
