tablamultiplicar con routing

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,5 +4,7 @@
   <app-musica-component></app-musica-component> -->
   <app-menu-component></app-menu-component>
   <hr>
+  <app-menutabla></app-menutabla>
+  <hr>
   <router-outlet></router-outlet>
 </div>
